# DockCADD-v2

./: .gitignore  README.md  patch_single_ligand_results.py  pyproject.toml  requirements.txt  run_chebbak_matrix.py
caddock/: __init__.py  docking.py
dockcadd/: __init__.py  cli.py  config.py  engine.py  models.py  reporting.py  resolution.py  workflows.py
examples/: chebbak_matrix.json
scripts/: setup.sh  setup_windows.ps1
src/: cadock.py
tests/: test_public_api.py  test_reporting.py
